--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,15 @@
   font-weight: normal;
 }
 
+.container h2{
+  color: #ffffff;
+  text-align: center;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: normal;
+}
+
+
 .container .video-container{
   display: flex;
   flex-wrap: wrap;
