--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,60 @@
-*{
+:root {
+  --color-primario: #ff0000;
+  --color-secundario: #00ff00;
+  --color-terciario: #0000ff;
+  --color-fondo: rgba(233, 233, 233, 0.93);
+  --davys-gray: #525252ff;
+  --davys-gray-2: #4d4d4dff;
+  --outer-space: #474747ff;
+  --onyx: #424242ff;
+  --onyx-2: #3d3d3dff;
+  --jet: #383838ff;
+  --jet-2: #333333ff;
+  --jet-3: #2e2e2eff;
+  --jet-4: #2b2b2bff;
+  --eerie-black: #252525ff;
+}
+
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   text-transform: capitalize;
-
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background: var(--jet-3);
+  font-family: "Open Sans", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-.container{
+.container {
   position: relative;
   min-height: 100vh;
-  background: #334;
+  background: var(--jet-3);
 }
 
-.container h1{
-  color: #ffffff;
-  text-align: center;
+.container h1 {
+  color: var(--color-fondo);
+
+
+  background: rgb(46, 46, 46);
+  background: linear-gradient(0deg, rgba(46, 46, 46, 1) 0%, rgba(0, 0, 0, 1) 100%);
+  display: flex;
+  justify-content: center; /* Centrar horizontalmente */
+  align-items: center; /* Centrar verticalmente */
   padding: 15px;
-  font-size: 40px;
-  font-weight: normal;
+  font-size: 70px;
+  font-weight: bold;
+  height: 270px;
 }
 
-.container h2{
-  color: #ffffff;
+.container h2 {
+  color: var(--color-fondo);
   text-align: center;
   padding: 10px;
   font-size: 20px;
   font-weight: normal;
 }
 
-
-.container .video-container{
+.container .video-container {
   display: flex;
   flex-wrap: wrap;
   gap: 15px;
@@ -38,20 +62,18 @@
   padding: 10px;
 }
 
-.container .video-container .video{
+.container .video-container .video {
   height: 250px;
   width: 350px;
-  border: 5px solid #ffffff;
-  border-radius:  5px;
-  box-shadow: 0 5px 15px rgba(0,0,0,.7);
+  border: 0 solid #242424;
+  border-radius: 5px;
+  box-shadow: 0 10px 15px rgba(0, 0, 0, .7);
   cursor: pointer;
   overflow: hidden;
-
-
 }
 
 
-.container .video-container .video video{
+.container .video-container .video video {
   height: 100%;
   width: 100%;
   object-fit: cover;
@@ -59,43 +81,48 @@
 }
 
 .container .video-container .video:hover video {
-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
-.container .popup-video{
+.container .popup-video {
   position: fixed;
-  top: 0; left: 0;
+  top: 0;
+  left: 0;
   z-index: 100;
-  background: rgba(0,0,0,.8);
+  background: rgba(0, 0, 0, .8);
   height: 100%;
   width: 100%;
   display: none;
 }
 
 
-.container .popup-video video{
+.container .popup-video video {
   position: absolute;
-  top: 50%; left: 50%;
-  transform:  translate(-50%, -50%);
-  width: 750px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 90vh;
+  max-height: 90vh;
   border-radius: 5px;
   border: 3px solid #ffffff;
   object-fit: cover;
 }
 
 
-.container .popup-video span{
+.container .popup-video span {
   position: absolute;
-  top: 5px; right: 20px;
-  font-size: 20px;
-  color: #ffffff;
+  top: 5px;
+  right: 20px;
+  font-size: 50px;
+  color: var(--color-fondo);
+  background: rgba(0, 0, 0, .8);
   font-weight: bolder;
   z-index: 100;
   cursor: pointer;
 }
 
 @media (max-width: 768px) {
-  .container .popup-video video{
+  .container .popup-video video {
     width: 50%;
   }
 }
