- Click on video pop up closes the pop up - Different desing

--- a/css/style.css
+++ b/css/style.css
@@ -41,18 +41,24 @@
   justify-content: center; /* Centrar horizontalmente */
   align-items: center; /* Centrar verticalmente */
   padding: 15px;
-  font-size: 70px;
+  font-size: 90px;
   font-weight: bold;
-  height: 270px;
+  height: 390px;
 }
 
-.container h2 {
-  color: var(--color-fondo);
-  text-align: center;
-  padding: 10px;
-  font-size: 20px;
-  font-weight: normal;
-}
+/*.container h2 {*/
+/*  color: var(--color-fondo);*/
+/*  !*background: rgb(46, 46, 46);*!*/
+/*  !*background: linear-gradient(0deg, rgba(46, 46, 46, 1) 0%, rgba(0, 0, 0, 1) 100%);*!*/
+/*  display: flex;*/
+/*  justify-content: center; !* Centrar horizontalmente *!*/
+/*  align-items: center; !* Centrar verticalmente *!*/
+/*  padding: 30px;*/
+/*  !*margin-bottom: 60px;*!*/
+/*  font-size: 30px;*/
+/*  font-weight: normal;*/
+/*  !*height: 100px;*!*/
+/*}*/
 
 .container .video-container {
   display: flex;
