--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,6 @@
 
 .container h1 {
   color: var(--color-fondo);
-
-
   background: rgb(46, 46, 46);
   background: linear-gradient(0deg, rgba(46, 46, 46, 1) 0%, rgba(0, 0, 0, 1) 100%);
   display: flex;
@@ -43,22 +41,29 @@
   padding: 15px;
   font-size: 90px;
   font-weight: bold;
-  height: 390px;
+  height: 280px;
+}
+.custom-link {
+  text-decoration: underline;
+  text-decoration-color: var(--color-fondo); /* Cambia el color del subrayado según tus preferencias */
 }
 
-/*.container h2 {*/
-/*  color: var(--color-fondo);*/
-/*  !*background: rgb(46, 46, 46);*!*/
-/*  !*background: linear-gradient(0deg, rgba(46, 46, 46, 1) 0%, rgba(0, 0, 0, 1) 100%);*!*/
-/*  display: flex;*/
-/*  justify-content: center; !* Centrar horizontalmente *!*/
-/*  align-items: center; !* Centrar verticalmente *!*/
-/*  padding: 30px;*/
-/*  !*margin-bottom: 60px;*!*/
-/*  font-size: 30px;*/
-/*  font-weight: normal;*/
-/*  !*height: 100px;*!*/
-/*}*/
+
+
+.container h2 {
+  color: var(--color-fondo);
+  /*background: rgb(46, 46, 46);*/
+  /*background: linear-gradient(0deg, rgba(46, 46, 46, 1) 0%, rgba(0, 0, 0, 1) 100%);*/
+  display: flex;
+  justify-content: center; /* Centrar horizontalmente */
+  align-items: center; /* Centrar verticalmente */
+  /*padding-top: 1px;*/
+  padding-bottom: 70px;
+  /*margin-bottom: 60px;*/
+  font-size: 15px;
+  font-weight: normal;
+  /*height: 100px;*/
+}
 
 .container .video-container {
   display: flex;
