--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@
   padding-bottom: 70px;
   /*margin-bottom: 60px;*/
   font-size: 15px;
-  font-weight: normal;
+  font-weight: bold;
   /*height: 100px;*/
 }
 
