--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
   --jet-2: #333333ff;
   --jet-3: #2e2e2eff;
   --jet-4: #2b2b2bff;
-  --eerie-black: #252525ff;
+  --eerie-black: #0f0f0f;
 }
 
 
@@ -21,7 +21,7 @@
   padding: 0;
   box-sizing: border-box;
   text-transform: capitalize;
-  background: var(--jet-3);
+  background: var(--eerie-black);
   font-family: "Open Sans", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
@@ -33,8 +33,8 @@
 
 .container h1 {
   color: var(--color-fondo);
-  background: rgb(46, 46, 46);
-  background: linear-gradient(0deg, rgba(46, 46, 46, 1) 0%, rgba(0, 0, 0, 1) 100%);
+  background: var(--eerie-black);
+  background: linear-gradient(0deg, var(--eerie-black) 0%, rgba(0, 0, 0, 1) 100%);
   display: flex;
   justify-content: center; /* Centrar horizontalmente */
   align-items: center; /* Centrar verticalmente */
